Improve readability of German dialogue text

--- a/scenes/berufsschule-gastronomie-de-ru.html
+++ b/scenes/berufsschule-gastronomie-de-ru.html
@@ -222,7 +222,10 @@
     <div class="dialogue">
       <div class="line">
         <span class="who">Herr König</span>
-        <p class="de">Zur Erinnerung: Berufsschulen bieten zum Beispiel Ausbildung für Gastronomieberufe an – und heute wollen wir zeigen, wie praxisnah unser Lehrplan ist.</p>
+        <p class="de">
+          Zur Erinnerung: Berufsschulen bieten zum Beispiel Ausbildung für Gastronomieberufe an – und heute
+          wollen wir zeigen, wie praxisnah unser Lehrplan ist.
+        </p>
       </div>
       <div class="line">
         <span class="who">Maya</span>
